--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@ miss: [
     "I miss the way we talk for hours, just enjoying each other’s company.",
     "I miss the way you make me feel at home, no matter where we are.",
     "I miss you more with each passing day. I can’t wait to be with you again.",
-    "I miss you, and every moment apart just makes me love you even more."
+    "I miss you, and every moment apart just makes me love you even more.")
 tired: [
     "Take a rest, my love. You deserve it.",
     "You’re doing so well, but remember to take a break.",
@@ -633,7 +633,7 @@ tired: [
     "You deserve all the relaxation you can get. Rest easy.",
     "Don’t worry about anything. Just rest now and feel better.",
     "You’re amazing, but even superheroes need a break.",
-    "Take care of yourself, and know that I’ll always be here for you."
+    "Take care of yourself, and know that I’ll always be here for you.")
 angry: [
     "I know you're upset right now, but I’ll always be here to listen.",
     "It’s okay to be angry, love. Just know I’m here for you, no matter what.",
@@ -695,7 +695,7 @@ angry: [
     "I understand your frustration, and I’ll be here when you’re ready.",
     "It’s okay to be angry, but I’m here to help make it better.",
     "I’ll give you space, but know that I’m still here for you.",
-    "You’re angry, but my love for you doesn’t change. I’m here for you."
+    "You’re angry, but my love for you doesn’t change. I’m here for you.")
 insecure: [
     "You are more than enough, just as you are.",
     "You are worthy of love and happiness.",
@@ -772,7 +772,7 @@ insecure: [
     "I will always remind you of your worth, even when you forget.",
     "You are worth so much more than you realize.",
     "Don’t let insecurity steal your peace. You are amazing just as you are.",
-    "You are perfect in your own way, and I love you for it."
+    "You are perfect in your own way, and I love you for it.")
 unwell: [
     "I hope you feel better soon. Rest up, love.",
     "Take care of yourself, and let me know if you need anything.",
@@ -899,8 +899,8 @@ unwell: [
     "Sending you healing thoughts, love. I hope you feel better soon.",
     "I’m so thankful for you, and I hope you get better soon.",
     "Take it easy, love. I’m thinking of you and sending healing vibes.",
-    "You’ve got this, love. Rest and take care. You’ll be back on your feet soon."
-achieve: [
+    "You’ve got this, love. Rest and take care. You’ll be back on your feet soon.") 
+  achieve: [
     "I'm so proud of you! You've worked hard for this moment.",
     "Your dedication and hard work have paid off, and I couldn't be happier for you.",
     "This achievement is a reflection of how amazing you are. I'm so proud!",
@@ -984,8 +984,8 @@ achieve: [
     "You’re capable of achieving so much, and today is proof of your strength and determination.",
     "Your success makes my heart so full. I’m incredibly proud of everything you’ve done.",
     "You’ve proven that with hard work, anything is possible. Keep shining, love!",
-    "I’m so proud of you for pushing through and reaching this incredible milestone."
-]
+    "I’m so proud of you for pushing through and reaching this incredible milestone.")
+  };
 
     let currentMessageIndex = 0;
     let currentMessages = [];
