--- a/index.html
+++ b/index.html
@@ -264,6 +264,7 @@ sad: [
     "I’ll always choose you, no matter what.",
     "You’re my safe space, and I hope I am yours.",
     "You are my greatest gift, my love."
+  ],
   happy: [
     "Your happiness is the light of my life.",
     "I love seeing your smile; it brightens my whole day.",
@@ -357,7 +358,7 @@ sad: [
     "Your happiness fills my heart with so much warmth and love.",
     "I love you more than words can ever express, my joy.",
     "Your smile is my favorite sight, and your happiness my favorite sound.",
-    
+    ],
   stressed: [
     "Take a deep breath. I’m here for you, always.",
     "You don’t have to face this alone. I’m by your side.",
@@ -445,6 +446,7 @@ sad: [
     "You are not alone in this, and together we can handle anything that comes our way.",
     "When life gets tough, just remember that you have my heart and my support.",
     "You are so strong, and I’ll always be here to remind you of that, especially when things are hard."
+    ],
 miss: [
     "I miss you so much. I can’t wait to see you again.",
     "Every moment apart makes me miss you more.",
@@ -549,7 +551,8 @@ miss: [
     "I miss the way we talk for hours, just enjoying each other’s company.",
     "I miss the way you make me feel at home, no matter where we are.",
     "I miss you more with each passing day. I can’t wait to be with you again.",
-    "I miss you, and every moment apart just makes me love you even more.")
+    "I miss you, and every moment apart just makes me love you even more."
+  ],
 tired: [
     "Take a rest, my love. You deserve it.",
     "You’re doing so well, but remember to take a break.",
@@ -633,7 +636,8 @@ tired: [
     "You deserve all the relaxation you can get. Rest easy.",
     "Don’t worry about anything. Just rest now and feel better.",
     "You’re amazing, but even superheroes need a break.",
-    "Take care of yourself, and know that I’ll always be here for you.")
+    "Take care of yourself, and know that I’ll always be here for you."
+  ],
 angry: [
     "I know you're upset right now, but I’ll always be here to listen.",
     "It’s okay to be angry, love. Just know I’m here for you, no matter what.",
@@ -695,7 +699,8 @@ angry: [
     "I understand your frustration, and I’ll be here when you’re ready.",
     "It’s okay to be angry, but I’m here to help make it better.",
     "I’ll give you space, but know that I’m still here for you.",
-    "You’re angry, but my love for you doesn’t change. I’m here for you.")
+    "You’re angry, but my love for you doesn’t change. I’m here for you."
+  ],
 insecure: [
     "You are more than enough, just as you are.",
     "You are worthy of love and happiness.",
@@ -772,7 +777,8 @@ insecure: [
     "I will always remind you of your worth, even when you forget.",
     "You are worth so much more than you realize.",
     "Don’t let insecurity steal your peace. You are amazing just as you are.",
-    "You are perfect in your own way, and I love you for it.")
+    "You are perfect in your own way, and I love you for it."
+  ],
 unwell: [
     "I hope you feel better soon. Rest up, love.",
     "Take care of yourself, and let me know if you need anything.",
@@ -899,7 +905,8 @@ unwell: [
     "Sending you healing thoughts, love. I hope you feel better soon.",
     "I’m so thankful for you, and I hope you get better soon.",
     "Take it easy, love. I’m thinking of you and sending healing vibes.",
-    "You’ve got this, love. Rest and take care. You’ll be back on your feet soon.") 
+    "You’ve got this, love. Rest and take care. You’ll be back on your feet soon."
+  ],
   achieve: [
     "I'm so proud of you! You've worked hard for this moment.",
     "Your dedication and hard work have paid off, and I couldn't be happier for you.",
