--- a/index.html
+++ b/index.html
@@ -979,7 +979,8 @@ unwell: [
     "You’re capable of achieving so much, and today is proof of your strength and determination.",
     "Your success makes my heart so full. I’m incredibly proud of everything you’ve done.",
     "You’ve proven that with hard work, anything is possible. Keep shining, love!",
-    "I’m so proud of you for pushing through and reaching this incredible milestone.")
+    "I’m so proud of you for pushing through and reaching this incredible milestone."
+    ]
   };
     
     let currentMessageIndex = 0;
