--- a/index.html
+++ b/index.html
@@ -987,8 +987,11 @@ unwell: [
     let currentMessages = [];
 
     function showMessages(type) {
+      // Ensure the type exists in the message object
+      (messages[type]) {
       currentmessages = messages[type];
       currentmessageIndex = 0;
+      
       const options = document.getElementById('options');
       const messageBox = document.getElementById('message-box');
       const message = document.getElementById('message');
@@ -996,8 +999,8 @@ unwell: [
 
       options.style.display = 'none';
       messageBox.style.display = 'block';
-      message.innerHTML = currentMessages[currentMessageIndex];
-      nextButton.style.display = 'block';
+      message.innerHTML = currentMessages[currentMessageIndex]; // show the first message
+      nextButton.style.display = 'block'; // show "next" if there are more messages
     }
 
     function nextMessage() {
