--- a/index.html
+++ b/index.html
@@ -989,8 +989,8 @@ unwell: [
     function showMessages(type) {
       // Ensure the type exists in the message object
       (messages[type]) {
-      currentmessages = messages[type];
-      currentmessageIndex = 0;
+      currentMessages = messages[type];
+      currentMessageIndex = 0;
       
       const options = document.getElementById('options');
       const messageBox = document.getElementById('message-box');
@@ -1000,7 +1000,8 @@ unwell: [
       options.style.display = 'none';
       messageBox.style.display = 'block';
       message.innerHTML = currentMessages[currentMessageIndex]; // show the first message
-      nextButton.style.display = 'block'; // show "next" if there are more messages
+      nextButton.style.display = currentMessages.length > 1 ? 'inline-block' : 'none';
+      }
     }
 
     function nextMessage() {
