--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     }
 
     body::before {
-      content: "🦖🐈🦕🐈🦖🐈🦕🐈🦖🐈🦕🐈🦖🐈🦕🐈🦖🐈🦕🐈🦖🐈🦕";
+      content: "🦖😻🦕😻🦖😻🦕😻🦖😻🦕😻🦖😻🦕😻🦖😻🦕😻🦖😻🦕";
       font-size: 3rem;
       position: fixed;
       top: 0;
