--- a/index.html
+++ b/index.html
@@ -1012,6 +1012,7 @@ unwell: [
     function goBack() {
         document.getElementById('options').style.display = 'block';
         document.getElementById('message-box').style.display = 'none';
+      </script>
     }
   }
 
